[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -493.0
margin_right = 269.0
margin_bottom = 158.0

[node name="Weight" type="Control" parent="Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.5
margin_right = 37.5
margin_bottom = 92.0

[node name="Label" type="Label" parent="Buttons/Weight"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_right = 105.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Weight in Kg"
__meta__ = {
"_edit_lock_": true
}

[node name="input" type="SpinBox" parent="Buttons/Weight"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -40.0
margin_right = 65.0
max_value = 1000.0
step = 0.5
value = 75.0
__meta__ = {
"_edit_lock_": true
}

[node name="Amount" type="Control" parent="Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = -115.5
margin_right = 36.5
margin_bottom = -23.5

[node name="Label" type="Label" parent="Buttons/Amount"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -101.0
margin_right = 101.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Amount in L"
__meta__ = {
"_edit_lock_": true
}

[node name="input" type="SpinBox" parent="Buttons/Amount"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -40.0
margin_right = 65.0
max_value = 1000.0
step = 0.5
value = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="Vol" type="Control" parent="Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -37.5
margin_top = -291.0
margin_right = 37.5
margin_bottom = -201.0

[node name="Label" type="Label" parent="Buttons/Vol"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.5
margin_right = 65.5
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Vol in %"
__meta__ = {
"_edit_lock_": true
}

[node name="input" type="SpinBox" parent="Buttons/Vol"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -40.0
margin_right = 65.0
step = 0.1
value = 5.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sex" type="OptionButton" parent="Buttons"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -52.0
margin_right = 76.5
custom_fonts/font = ExtResource( 2 )
text = "Female"
items = [ "Male", null, false, 1, null, "Female", null, false, 2, null ]
selected = 1

[node name="Result" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -119.0
margin_top = -375.0
margin_right = 120.0
margin_bottom = -18.0

[node name="Result" type="Control" parent="Result"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.5
margin_right = 86.5
margin_bottom = 90.0

[node name="Label" type="Label" parent="Result/Result"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -177.0
margin_right = 177.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Alcohol in your blood"
__meta__ = {
"_edit_lock_": true
}

[node name="Display" type="Label" parent="Result/Result"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -46.0
margin_right = 26.0
custom_fonts/font = ExtResource( 2 )
text = "0.6"
__meta__ = {
"_edit_lock_": true
}

[node name="Sober" type="Control" parent="Result"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.5
margin_top = -94.0
margin_right = 82.5

[node name="Label" type="Label" parent="Result/Sober"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_right = 176.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Time to be sober in h"

[node name="Display" type="Label" parent="Result/Sober"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -46.0
margin_right = 21.0
custom_fonts/font = ExtResource( 2 )
text = "10"

[node name="Label" type="Label" parent="Result"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.5
margin_top = -23.0
margin_right = 350.5
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "ALL THESE NUMBERS ARE ESTIMATED!!!"

[connection signal="value_changed" from="Buttons/Weight/input" to="." method="_on_weights_value_changed"]
[connection signal="value_changed" from="Buttons/Amount/input" to="." method="_on_amount_value_changed"]
[connection signal="value_changed" from="Buttons/Vol/input" to="." method="_on_vol_value_changed"]
